# Product_Service

./: .env.example  .gitignore  Dockerfile  Dockerfile.parser  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmd/: __init__.py
cmd/api/: __init__.py  main.py
cmd/backfill_embeddings/: main.py
cmd/migrator/: main.py
cmd/worker-enrichment/: main.py
cmd/worker-raw-products/: __init__.py  main.py
deploy/alertmanager/: alertmanager.yml
deploy/docker/: Dockerfile.api  Dockerfile.parser  Dockerfile.worker  Dockerfile.worker-raw  docker-compose.yml
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: MDM_PIPELINE.md  monitoring.md
internal/: __init__.py
internal/domain/: __init__.py  category.py  crm.py  errors.py  product.py  value_objects.py
internal/infrastructure/: __init__.py
internal/transport/: __init__.py
internal/usecase/: __init__.py  category_matcher.py  category_service.py  create_product.py  enrich_product.py  ingest_raw_product.py  product_refinery.py  search_products.py  semantic_search.py
migrations/: 001_create_product_families.sql  002_create_prices.sql  003_create_inventory.sql  004_create_outbox.sql  005_add_parser_fields.sql  005_add_source_url.sql  006_category_service.sql  006_fulltext_search.sql  007_seed_categories.sql  008_add_vector_embeddings.sql  009_seed_demo_data.sql  010_create_crm_tables.sql  011_raw_data.sql
parser-service/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  proxies.txt  requirements.txt  test_components.py
parser-service/cmd/: main.py
parser-service/config/: __init__.py  settings.py
parser-service/internal/: __init__.py
parser-service/pkg/: __init__.py
parser_service/: README.md  __init__.py
parser_service/cmd/: main.py
parser_service/config/: __init__.py  (+1 more)
pkg/: __init__.py
tests/: conftest.py
(+61 files in other folders)
